welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:1: error: not found: value True
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {if (!weekday) return True;
                                                                                ^sleepIn:2: error: type mismatch;
 found   : Unit
 required: Boolean
                                                           if (vacation) return true} 
                                                           ^